<resources>
    <!-- Activities -->
    <string name="app_name">LunchWheel</string>
    <string name="location_activity">Set Location</string>
    <string name="preferences_activity">Preferences</string>
    <string name="results_activity">Results</string>

    <string name="spin">Spin</string>
    <string name="route_to_restaurant">Route to restaurant</string>
    <string name="todays_lunch_is_at">Today\'s Lunch will be at...</string>
    <string name="start">Start</string>

    <string name="widget_title">LunchWheel Widget</string>

    <string name="share_text">Meet me here for lunch:\n
        Name: %1$s\n
        Address: %2$s\n
        Phone: %3$s\n
    </string>

    <!--<string name="yelp_link_description"><a href="http://www.trivir.com">View on Yelp!</a></string>-->
    <string name="yelp_link_description">Click here to view on Yelp!</string>

    <!-- Menu Items -->
    <string name="action_location">Location</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <!-- Fetch latitude and longitude from the given address -->
    <string name="use_device_location">Use Device Location</string>
    <string name="specify_location">Manually Specify Location</string>
    <string name="update_location">Update Location</string>
    <string name="error_no_location_data">Error.  No location data found</string>
    <string name="error_no_address_data">Error.  No address data found</string>
    <string name="error_address_lookup_unavailable">Error.  Address Look-Up Service Unavailable</string>
    <string name="error_illegal_address_lookup_arg">Error.  Illegal Address Look-Up Argument</string>
    <string name="error_address_not_found">Error.  Address Not Found</string>
    <string name="location_found">Location found</string>

    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip Code</string>

    <!-- Preferences Fragment -->
    <string name="max_distance">Maximum Distance</string>
    <string name="selected_miles">%d Miles</string>
    <string name="min_rating">Minimum Rating</string>
    <string name="save_preferences">Save Preferences</string>
    <string name="preferences_saved">Preferences Saved</string>

    <string name="default_city">Buffalo</string>
    <string name="default_state">NY</string>
    <string name="default_zip">14226</string>


    <string name="content_authority">com.example.pmm.android.udacity.lunchwheel</string>

    <string name="toast_no_device_location">Unable to get location.  Please specify location manually.</string>
    <string name="toast_no_results">No results to choose from.</string>
    <string name="toast_announce_winner">And the winner is ...</string>

    <!-- IO Errors -->
    <string name="error_oauth_exception">Error retrieving data.  Check network connection.</string>
    <string name="no_data">No data available.</string>

    <!-- Content Descriptions -->
    <string name="desc_logo">LunchWheel logo</string>
    <string name="desc_wheel">LunchWheel.  Fling to spin</string>
    <string name="desc_spinButton">Spin Button</string>
    <string name="desc_resultImage">Result Image</string>

    <string name="desc_UseDeviceLocationRadioButton">Use Device Location radio button</string>
    <string name="desc_SpecifyLocationRadioButton">Specify Device radio button</string>
    <string name="desc_EnterCity">Enter City</string>
    <string name="desc_EnterState">Enter State</string>
    <string name="desc_EnterZip">Enter Zipcode</string>
    <string name="desc_SaveLocationButton">Update Location button</string>
    <string name="desc_MaxDistanceSlider">Maximum Distance Slide Bar</string>
    <string name="desc_MinRatindSlider">Minimum Rating Slide Bar</string>
    <string name="desc_SavePreferencesButton">Save Preferences button</string>

</resources>
