<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_lg"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_lg">

        <RadioButton
            android:id="@+id/use_device_location_button"
            android:contentDescription="@string/desc_UseDeviceLocationRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_device_location" />

        <RadioButton
            android:id="@+id/specify_location_button"
            android:contentDescription="@string/desc_SpecifyLocationRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specify_location" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/specify_location_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_lg"
            android:text="@string/city" />

        <EditText
            android:id="@+id/city_editText"
            android:contentDescription="@string/desc_EnterCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_lg"
            android:text="@string/state" />

        <EditText
            android:id="@+id/state_editText"
            android:contentDescription="@string/desc_EnterState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_lg"
            android:text="@string/zip" />

        <EditText
            android:id="@+id/zip_editText"
            android:contentDescription="@string/desc_EnterZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/lookup_address_button"
            android:contentDescription="@string/desc_SaveLocationButton"
            android:background="@color/blue_400"
            android:textColor="@color/black"
            android:padding="@dimen/padding_sm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/update_location" />

    </LinearLayout>

</LinearLayout>